--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ flutter:
   assets:
     - assets/image/prevent.png
     - assets/image/check.png
+    - assets/image/free.png
+    - assets/image/test.png
     - assets/image/bg.png
     - assets/icon/Google.png
     - assets/icon/Facebook.png
