--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ flutter:
     - assets/icon/Apple.png
     - assets/icon/Linked.png
     - assets/icon/Twitter.png
+    - assets/icon/mail.png
+    - assets/icon/lock.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
