--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/prevent.png
+    - assets/image/avt.png
+    - assets/image/headnode.png
+    - assets/image/track 1.png
+    - assets/image/track 2.png
+    - assets/image/vaccine.png
+    - assets/image/Image0000.png
     - assets/image/check.png
     - assets/image/free.png
     - assets/image/test.png
