--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,12 @@ flutter:
     - assets/icons/lock.png
     - assets/icons/user.png
     - assets/icons/twemoji_flag.png
+    - assets/icons/headache.png
+    - assets/icons/throat.png
+    - assets/icons/temperature.png
+    - assets/icons/coughing.png
+    - assets/icons/breathing.png
+    - assets/icons/sense.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
