--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^2.24.2
-  cloud_firestore: ^4.13.6
+  firebase_core: ^2.30.0
+  cloud_firestore: ^4.17.0
   firebase_auth: ^4.6.3
   firebase_storage: ^11.2.4
+  table_calendar: ^3.0.6
+  flutter_form_builder: ^7.7.0
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +90,7 @@ flutter:
     - assets/icons/breathing.png
     - assets/icons/sense.png
     - assets/icons/home_blue.png
+    - assets/icons/activity_blue.png
     - assets/icons/home.png
     - assets/icons/activity.png
     - assets/icons/clipboard.png
