--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_storage: ^11.2.4
   table_calendar: ^3.0.6
   flutter_form_builder: ^7.7.0
+  mailer: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -95,7 +96,8 @@ flutter:
     - assets/icons/activity.png
     - assets/icons/clipboard.png
     - assets/icons/userr.png
-
+    - assets/icons/cloud.png
+    - assets/icons/cloud_blue.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
