--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,7 @@ flutter:
     - assets/icons/userr.png
     - assets/icons/cloud.png
     - assets/icons/cloud_blue.png
+    - assets/image/me.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
