--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   animated_text_kit: ^4.2.2
   uuid: ^4.4.0
   image_picker: ^1.1.2
+  flutter_svg: 2.0.10+1
+  printing: ^5.9.0
+
 
 dev_dependencies:
   flutter_test:
